# Sensor

./: .gitignore  MANIFEST.in  MANIFEST.ini  README.rst  pytest.ini  setup.py  tox.ini
src/sensor/: sensor.py
src/sensor/cpp_sensor/: CMakeLists.txt
src/sensor/cpp_sensor/PythonInterface/: CMakeLists.txt  PyDictConversion.h  Sensor_python.cpp  Sensor_python.h  ndarray_converter.cpp  ndarray_converter.h
src/sensor/cpp_sensor/inc/: Config.h  ImageData.h  LayerCoupler.h  LayerDebugger.h  Monitor.h  NeuralLayer.h  NeuralNetwork.h  Neuron.h  PixelLayer.h  SegmentationLayer.h  Tools.h
src/sensor/cpp_sensor/src/: Config.cpp  ImageData.cpp  LayerCoupler.cpp  LayerDebugger.cpp  Monitor.cpp  NeuralLayer.cpp  NeuralNetwork.cpp  Neuron.cpp  PixelLayer.cpp  SegmentationLayer.cpp  Tools.cpp
src/sensor/cpp_sensor/test/: CMakeLists.txt  test_main.cpp  test_pixel.cpp  test_pixel.h
src/sensor/cpp_sensor/utility/cmake-dl/gtest/: CMakeLists.txt
src/sensor/cpp_sensor/utility/cmake-dl/pybind11/: CMakeLists.txt
src/sensor/dataset/: caltech101.py  viper.py
src/sensor/tools/: display.py  iotools.py  matlab_tools.py
tests/: test_sensor_pixels.py
tests/WorkingDir/: Sensor.ini  SensorPixel.ini
